# ss13-vox

./: .gitignore  .pre-commit-config.yaml  README.md  abmain.py  build_web.sh  daemon.py  generate.sh  pyproject.toml  setup.py  vox_config.yaml
ss13vox/: cli.py  codegen.py  config.py  consts.py  exceptions.py  phrase.py  pronunciation.py  sanitize.py  utils.py  voice.py
ss13vox/daemon/: config.py  gameserver.py
tests/: __init__.py  conftest.py  test_codegen.py  test_config.py  test_exceptions.py  test_phrase.py  test_pronunciation.py  test_sanitize.py  test_voice.py
