[build-system]

requires = ["setuptools", "setuptools-git-versioning", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
dynamic = ["version"]
name = "ss13-vox"
dependencies = [
  "pytango",
  "paho-mqtt",
]
authors = [
  {name = "Antonio Bartalesi", email = "antonio.bartalesi@gmail.com"},
]
description = "A tango device server to control the microcontrollers in the project MC-MAX"
readme = "README.md"
classifiers = [
"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
repository = "https://gitlab.com/ABartalesi/mc-max-tango-device-server"

[project.scripts]
McMaxTangoDs = "mcmax:main"
