[build-system]
requires = ["setuptools", "setuptools-git-versioning", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
dynamic = ["version"]
name = "ss13-vox"
dependencies = [
    "pyyaml",
    "jinja2",
]
authors = [
  {name = "Antonio Bartalesi", email = "antonio.bartalesi@gmail.com"},
]
description = "Text-to-Speech announcement system for Space Station 13"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
daemon = [
    "werkzeug",
    "ruamel.yaml",
]
test = [
    "pytest",
]

[project.urls]
repository = "https://github.com/A-Barta/ss13-vox"

[project.scripts]
ss13-vox = "abmain:main"
