[build-system]
requires = ["setuptools", "setuptools-git-versioning", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages.find]
include = ["ss13vox*"]

[project]
dynamic = ["version"]
name = "ss13-vox"
dependencies = [
    "pyyaml",
    "jinja2",
    "pydantic>=2.0",
]
authors = [
  {name = "Antonio Bartalesi", email = "antonio.bartalesi@gmail.com"},
]
description = "Fork of N3X15/ss13-vox - Text-to-Speech announcement system for Space Station 13"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
daemon = [
    "werkzeug",
    "ruamel.yaml",
]
test = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests (may require external tools)",
    "slow: marks tests as slow running",
]

[tool.coverage.run]
source = ["ss13vox"]
branch = true
omit = [
    "ss13vox/otfclient.py",
    "ss13vox/daemon/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[project.urls]
repository = "https://github.com/A-Barta/ss13-vox"

[project.scripts]
ss13-vox = "ss13vox.cli:main"

